--- a/automatic/PersianBingCalendar/PersianBingCalendar.nuspec
+++ b/automatic/PersianBingCalendar/PersianBingCalendar.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>PersianBingCalendar</id>
-    <version>2.2-update-2</version>
+    <version>2.3</version>
     <title>Persian Bing Calendar</title>
     <authors>Vahid Nasiri</authors>
     <owners>Muhammad Hussein Ammari</owners>
