--- a/automatic/speedtest/speedtest.nuspec
+++ b/automatic/speedtest/speedtest.nuspec
@@ -15,19 +15,18 @@
 ## Package Parameters
 Command-line options for installer configuration:
 - `/InstallDir:PATH`
-- `/StartMenuShortcut` Do not create Start Menu Shortcut
+- `/StartMenuShortcut` Create the Start Menu Shortcut
 
 ### Examples
 - Install + start menu shortcut:
-`choco install lossless-cut --params "/StartMenuShortcut"`
+`choco install speedtest --params "/StartMenuShortcut"`
 - Portable mode:
-`choco install lossless-cut --params "/InstallDir:C:\your\install\path"`
+`choco install speedtest --params "/InstallDir:C:\speedtest"`
 
 ### Default Parameters
 By default, **installation** of this package:
 - Will be installed in Chocolatey tools directory.
 - The Start menu shortcut is not created.
-	
 </description>
     <summary>22 billion tests and counting</summary>
     <copyright>Copyright © 2006-2021 Ookla, LLC. All Rights Reserved</copyright>
